--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ hr {
 }
 .bottom-container {
   background-color: #66BFBF;
-  margin: 0px 0px;
-  padding: 10px;
+  margin: 100px auto;
+  padding: 100px;
 }
 a {
   color: #11999E;
